ansible/roles/appserver/files/cloudformation.json
{
  "Description": "LAMP Stack Webservers",
  "Parameters": {
    "ELBName": {
      "Type": "String"
    },
    "InstanceTypeWebserver": {
      "Type": "String",
      "Default": "t2.micro"
    },
    "AMIWebserver": {
      "Type": "String",
      "Default": "ami-ba7772a7"
    },
    "KeyPair": {
      "Type": "String"
    }
  },
  "Resources": {
    "PublicELB": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
        "LoadBalancerName": { "Ref": "ELBName" },
        "AvailabilityZones": { "Fn::GetAZs" : "" },
        "CrossZone": "true",
        "HealthCheck": {
          "Target": "TCP:80",
          "HealthyThreshold": "2",
          "UnhealthyThreshold": "5",
          "Timeout": "5",
          "Interval": "6"
        },
        "Listeners": [
          {
            "InstancePort": "80",
            "LoadBalancerPort": "80",
            "Protocol": "HTTP"
          }
        ],
        "SecurityGroups": [
          { "Ref": "WebserverSecurityGroup" }
        ]
      }
    },
    "WebserverASG": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "AvailabilityZones": { "Fn::GetAZs" : "" },
        "LaunchConfigurationName": { "Ref": "WebserverInstance" },
        "Tags": [
          {
            "Key": "role",
            "Value": "webservers",
            "PropagateAtLaunch": "true"
          }
        ],
        "LoadBalancerNames": [{ "Ref": "PublicELB" }],
        "MinSize": "2",
        "MaxSize": "2"
      }
    },
    "WebserverInstance": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "InstanceType": { "Ref": "InstanceTypeWebserver" },
        "ImageId": { "Ref": "AMIWebserver" },
        "KeyName": { "Ref": "KeyPair" },
        "SecurityGroups": [
          { "Ref": "WebserverSecurityGroup" }
        ]
      }
    },
    "WebserverSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group for ELB and webservers",
        "VpcId": "vpc-774daf1e",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "31.50.11.105/32"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "82.30.234.191/32"
          }
        ]
      }
    }
  }
}
